--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
