RFID dll created

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 backend/node_modules/
 bank-automat/build/
-bank-automat/*.user 
+bank-automat/*.user
+bank-automat/RFIDReader/*.user
+bank-automat/RFIDReader/build/
 
 backend/.env
 
