--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ bank-automat/build/
 bank-automat/*.user
 bank-automat/RFIDReader/*.user
 bank-automat/RFIDReader/build/
+bank-automat/PinUI/*.user
+bank-automat/PinUI/build/
 
 backend/.env
 
