LoginHandler dll, Environment class created

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ bank-automat/RFIDReader/*.user
 bank-automat/RFIDReader/build/
 bank-automat/PinUI/*.user
 bank-automat/PinUI/build/
+bank-automat/LoginHandler/*.user
+bank-automat/LoginHandler/build/
 
 backend/.env
 
